# ucp

./: .gitignore  CNAME  CONTRIBUTING.md  GOVERNANCE.md  README.md  SPEC.md  index.html  package-lock.json  package.json
.github/ucp-digest-template/: README.md  ucp-digest.yml
.github/workflows/: docker-server.yml  release.yml  test-libs.yml  validate.yml
assets/: site.css  site.js
conformance/invalid/: claim-without-sources.ucp.json  conflict-single-position.ucp.json  empty-sources-registry.ucp.json  must-know-over-max.ucp.json  non-namespaced-extension.ucp.json  profile-ucp-secure-no-audience.ucp.json  profile-ucp-verified-no-extension.ucp.json
conformance/valid/: claim-salience-method.ucp.json  claim-supersedes.ucp.json  minimal.ucp.json  profile-ucp-verified.ucp.json  resolution-hint-object.ucp.json
examples/: index.html  sidebar-receipt.receipt.json
examples/data/: jira-task.ucp.json  (+2 more)
libs/mcp-server/: README.md  pyproject.toml
libs/mcp-server/src/ucp_mcp/: __init__.py  server.py  store.py
libs/mcp-server/tests/: test_server.py
libs/python/: README.md  pyproject.toml
libs/python/src/ucp/: __init__.py  models.py  profiles.py  receipt_validation.py  render.py  validation.py
libs/python/src/ucp/schema/: ucp.schema.json  usage-receipt.schema.json
libs/python/tests/: conftest.py  test_models.py  test_profiles.py  test_receipt_validation.py  test_render.py  test_validation.py
libs/server/: .dockerignore  Dockerfile  README.md  pyproject.toml
libs/server/clients/claude-code/: ucp.md
libs/server/clients/cursor/: ucp-hosted.md  ucp.md
libs/server/src/ucp_server/: __init__.py  __main__.py  access_audit.py  admin_view.py  app.py  auth.py  billing_store.py  brand.py  cache.py  config.py  connector_config.py  connector_resources.py  demo_context.py  demo_generate.py  demo_rate_limit.py  errors.py  eval_report.py  hosted_view.py  indexing_status.py  invite_store.py  logging_setup.py  mcp_oauth.py  mcp_oauth_view.py  mcp_tools.py  oauth.py  platform_db.py  portal_auth.py  portal_session.py  portal_static.py  receipt_models.py  receipt_store.py  service.py  sidebar_auth.py  tenant.py  tenant_resolve.py  tenant_store.py  token_savings.py  token_store.py  usage_store.py  user_store.py  (+2 more)
libs/server/tests/: conftest.py  fixtures.py  test_api.py  test_auth.py  test_billing.py  test_cache.py  test_config.py  test_connected_devices.py  test_connector_config.py  test_connector_resources.py  test_demo_context.py  test_demo_context_api.py  test_demo_generate.py  test_hosted.py  test_indexing_status.py  test_invites.py  test_logging.py  test_mcp.py  test_mcp_oauth.py  test_me_tokens.py  test_portal_auth.py  test_receipt.py  test_receipt_analytics.py  test_server_role.py  test_sidebar_auth.py  test_tenant_resolve.py  test_token_savings.py  test_tokens.py  test_usage.py  test_webhook_store.py  test_webhooks.py
mcp/: index.html
quickstart/: index.html
schema/: ucp.schema.json
spec/: index.html
tools/: benchmark_context.py  profiles.mjs  validate.mjs
try/: index.html  try.js
(+20 files in other folders)
